; ModuleID = '/home/carl/AnghaBench/libevent/extr_buffer.c_evbuffer_getchr.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_buffer.c_evbuffer_getchr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evbuffer_ptr = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, %struct.evbuffer_chain* }
%struct.evbuffer_chain = type { i64, i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.evbuffer_ptr*)* @evbuffer_getchr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @evbuffer_getchr(%struct.evbuffer_ptr* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.evbuffer_ptr*, align 8
  %4 = alloca %struct.evbuffer_chain*, align 8
  %5 = alloca i64, align 8
  store %struct.evbuffer_ptr* %0, %struct.evbuffer_ptr** %3, align 8
  %6 = load %struct.evbuffer_ptr*, %struct.evbuffer_ptr** %3, align 8
  %7 = getelementptr inbounds %struct.evbuffer_ptr, %struct.evbuffer_ptr* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 1
  %9 = load %struct.evbuffer_chain*, %struct.evbuffer_chain** %8, align 8
  store %struct.evbuffer_chain* %9, %struct.evbuffer_chain** %4, align 8
  %10 = load %struct.evbuffer_ptr*, %struct.evbuffer_ptr** %3, align 8
  %11 = getelementptr inbounds %struct.evbuffer_ptr, %struct.evbuffer_ptr* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %5, align 8
  %14 = load %struct.evbuffer_chain*, %struct.evbuffer_chain** %4, align 8
  %15 = icmp eq %struct.evbuffer_chain* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %30

17:                                               ; preds = %1
  %18 = load %struct.evbuffer_chain*, %struct.evbuffer_chain** %4, align 8
  %19 = getelementptr inbounds %struct.evbuffer_chain, %struct.evbuffer_chain* %18, i32 0, i32 1
  %20 = load i64*, i64** %19, align 8
  %21 = load %struct.evbuffer_chain*, %struct.evbuffer_chain** %4, align 8
  %22 = getelementptr inbounds %struct.evbuffer_chain, %struct.evbuffer_chain* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* %5, align 8
  %25 = add i64 %23, %24
  %26 = getelementptr inbounds i64, i64* %20, i64 %25
  %27 = load i64, i64* %26, align 8
  %28 = trunc i64 %27 to i8
  %29 = zext i8 %28 to i32
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %17, %16
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
